[workspace]
resolver = '3'
members = [
    "oxstream", "signal", "desktop/src-tauri"
]

[workspace.dependencies]
anyhow = "1.0.102"
serde ={ version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"