[package]
name = "oxstream"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {workspace = true}
ashpd = { version = "0.13.4", features = ["screencast"] }
gst = { package = "gstreamer", version = "0.25.1" }
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
