[package]
name = "oxstream-signal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {workspace = true}
axum = { version = "0.8.8", features = ["ws"] }
dashmap = "6.1.0"
futures-util = { version = "0.3.32", features = ["sink"] }
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
